# rtow_rust

./: .gitignore  Cargo.toml  README.md
output/: 02.ppm  03.ppm  04.ppm  05.ppm  06.ppm  07.ppm  08.ppm  09.ppm  10.ppm  11.ppm  12.ppm  13.ppm  14.ppm  15.ppm  16.ppm
src/: core.rs  lib.rs  main.rs  materials.rs  shapes.rs
src/core/: camera.rs  hit_record.rs  ray.rs  vec3.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs
src/shapes/: hittable.rs  hittable_list.rs  sphere.rs
