[package]
name = "rtow_rust"
version = "0.2.0"
authors = ["Wessam <wessamfathi@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
overload = "0.1.1"
rand = "0.8"
rayon = "1.10.0"

[profile.release]
debug = true